[gd_scene load_steps=4 format=2]

[ext_resource path="res://entities/enemies/bat/bat.gd" type="Script" id=1]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 8 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 3.87663, 3.80703 )

[node name="Bat" type="KinematicBody2D" groups=[
"Enemy",
]]
collision_layer = 8
collision_mask = 8
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -8.0
margin_top = -8.0
margin_right = 8.0
margin_bottom = 8.0
color = Color( 0.368627, 0.0666667, 0.372549, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Attackbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Attackbox"]
shape = SubResource( 1 )

[node name="Hitbox" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="AttackTimer" type="Timer" parent="."]
one_shot = true

[connection signal="body_entered" from="Attackbox" to="." method="_on_Attackbox_body_entered"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_AttackTimer_timeout"]
